# CMake-example

./: CMakeLists.txt  README.md
Main/: CMakeLists.txt
Main/src/: main.cxx
MyLib/: CMakeLists.txt  README.md
MyLib/include/: Hello.h  common.h
MyLib/src/: Hello.cxx
doc/: README.md  copy-files.md  readme-emscripten.sh
